--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 
+* {
+    box-sizing: border-box;
+    font-family: Verdana;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: #ebebeb;
+}
+
+
+
 /*Nav Bar */
 
 nav {
@@ -7,40 +20,76 @@ nav {
 }
 
 a {
-    color: black;
+    color: hsla(33, 99%, 45%, 1);
     text-decoration: none;
+    font-size: 20px;
 }
 
 #logo {
-    height: 50px;
+    height: 70px;
     width: auto;
+    border: 1px solid black;
 }
 
 #nav-bar {
     display: flex;
     justify-content: space-around;
-    border: 1px solid black;
-    width: 30em;
+    width: 40em;
     align-items: center;
 }
 
 /*Banner */
 .jumbotron {
     background-color:beige;
-    height: 300px;
+    margin-top: 2em;
+    margin-bottom: 3em;
+    height: 400px;
+    width: 100%;
+    background-image: url('./images/banner.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
+    padding-top: 5em;
+}
+
+.jumbotron-text {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-weight: bold;
+    margin: auto;
+    width: 100%;
+    padding: 20px;
     text-align: center;
 }
 
-.jumbotron h1 {
-    padding-top: 40px;
-    margin-bottom: 100px;
+.jumbotron-text h1{
+    font-family: Garamond;
 }
+
 
 /*Subjects */
 
 .main-content{
+    padding: 20px;
+    border: 1px solid black;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 100px;
+    background-color: white;
+
+}
+.main-content-header{
+    text-align: center;
+    border: 1px solid blue;
+    padding-bottom: 0;
+}
+
+.main-content-subjects{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    border: 1px solid green;
+
 }
 
 .subjects{
@@ -48,10 +97,68 @@ a {
     flex-direction: column;
     align-items: center;
     border: 1px solid black;
+    margin: 4em;
 }
 
 .subjects img{
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 300px;
 }
 
+.subjects a{
+    color:hsla(33, 99%, 45%, 1);
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#level-title{
+    font-size: 70px;
+}
+
+/*Sidebar*/
+
+.sidebar{
+    poistion: fixed;
+    width: 200px;
+    height: 100%; 
+    transition: 0;
+    background-color:hsla(33, 99%, 45%, 1);
+    overflow: hidden;
+    border: 1px solid black;
+    border-radius: 5px;
+
+}
+
+.sidebar:hover ul{
+    display: block;
+    transition:2s; 
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+.sidebar ul{ 
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: none;
+}
+
+.sidebar ul li{
+    width: 100%;
+    list-style: none;
+    display: flex;
+    text-decoration: none;
+    color:rgba(0, 0, 0, 0.6);
+    padding: 5px;
+}
+
+.sidebar ul li a{
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: white;
+}
